gauge-selenium-sample-master/logs/7608-javac.exe.out
src\test\java\driver\driver\ImplementationToDo.java:35: error: ';' expected
       System.out.println("by class is displayed")
                                                  ^
src\test\java\driver\driver\ImplementationToDo.java:38: error: ';' expected
         System.out.println("")
                               ^
src\test\java\driver\driver\ImplementationToDo.java:43: error: ';' expected
  public void addNewItem(String itemName) throws InterruptedException {
                        ^
src\test\java\driver\driver\ImplementationToDo.java:43: error: ';' expected
  public void addNewItem(String itemName) throws InterruptedException {
                                        ^
src\test\java\driver\driver\ImplementationToDo.java:43: error: not a statement
  public void addNewItem(String itemName) throws InterruptedException {
                                                 ^
src\test\java\driver\driver\ImplementationToDo.java:43: error: ';' expected
  public void addNewItem(String itemName) throws InterruptedException {
                                                                     ^
src\test\java\driver\driver\ImplementationToDo.java:52: error: reached end of file while parsing
}
 ^
7 errors
